# zcode

./: Cargo.toml  LICENSE
.cursor/rules/: commit-conventions.mdc
docs/: README.md
src/: cli.rs  config.rs  lib.rs  main.rs  run.rs  ui.rs
src/agent/: chatgpt.rs  gemini.rs  mod.rs  openai.rs
src/tools/: executor.rs
