[package]
name = "zcode"
version = "0.1.0"
edition = "2021"
description = "CLI coding agent powered by LLMs"
license = "MIT"
authors = ["zcode"]

[package.metadata.deb]
maintainer = "zcode"
section = "utils"
priority = "optional"

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
directories = "5.0"
